fixed form alignment

--- a/src/sass/Auth/form-template.scss
+++ b/src/sass/Auth/form-template.scss
@@ -7,7 +7,6 @@
     position: absolute;
     inset: 0;
     background-color: #252329;
-
     z-index: -1;
   }
 
@@ -18,7 +17,6 @@
     padding: 2em;
     max-width: 420px;
     grid-column: 1 / -1;
-    grid-area: main;
     background-color: #252329;
     margin: auto;
   }
